# lab1/src/main/java/ru/ifmo/blps/model/SaleListing.java
@@ -1,0 +1,42 @@
+package ru.ifmo.blps.model;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import lombok.Getter;
+import lombok.Setter;
+import org.springframework.data.relational.core.mapping.Table;
+
+import java.time.LocalDateTime;
+
+@Getter
+@Setter
+@Entity
+@Table(name = "saleListings")
+@JsonIgnoreProperties({"hibernateLazyInitializer", "handler"})
+public class SaleListing {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(name = "title", nullable = false)
+    private String title;
+
+    @Column(name = "description", nullable = false)
+    private String description;
+
+    @Column(name = "price", nullable = false)
+    private Integer price;
+
+    @Column(name = "createdTime", nullable = false)
+    private LocalDateTime createdTime;
+
+    @Column(name = "address", nullable = false)
+    private String address;
+
+    @Column(name = "priority")
+    private String priority;
+}
